Removendo url /test e compatibilizando com v1.8.3 do bluc
